// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/BlockReveal renders with additional delay factor on reveal animation 1`] = `
.c0 {
  position: relative;
  display: inherit;
}

.c0::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: #fff;
  -webkit-transform: scale3d(0,1,1);
  -ms-transform: scale3d(0,1,1);
  transform: scale3d(0,1,1);
  -webkit-animation: hDiCPJ 1s 1s ease-in-out forwards;
  animation: hDiCPJ 1s 1s ease-in-out forwards;
}

.c0 > span {
  display: inherit;
  opacity: 0;
  -webkit-animation: jGGCbr 0.5s 1.5s ease-out  forwards;
  animation: jGGCbr 0.5s 1.5s ease-out  forwards;
}

<span
  class="c0"
>
  <span>
    hello world!
  </span>
</span>
`;

exports[`components/BlockReveal renders with background css style set to passed in backgroundColor 1`] = `
.c0 {
  position: relative;
  display: inherit;
}

.c0::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: #fff;
  -webkit-transform: scale3d(0,1,1);
  -ms-transform: scale3d(0,1,1);
  transform: scale3d(0,1,1);
  -webkit-animation: hDiCPJ 1s 0.5s ease-in-out forwards;
  animation: hDiCPJ 1s 0.5s ease-in-out forwards;
}

.c0 > span {
  display: inherit;
  opacity: 0;
  -webkit-animation: jGGCbr 0.5s 1s ease-out  forwards;
  animation: jGGCbr 0.5s 1s ease-out  forwards;
}

<span
  class="c0"
>
  <span>
    hello world!
  </span>
</span>
`;
